[project]
name = "tripleksampler"
version = "0.7.8"
description = "Triple-stage KSampler for Wan2.2 split models with Lightning LoRA"
readme = "README.md"
license = { file = "LICENSE" }
requires-python = ">=3.9"
dynamic = ["dependencies"]

[tool.setuptools.dynamic]
dependencies = { file = ["requirements.txt"] }

[project.urls]
Repository = "https://github.com/VraethrDalkr/ComfyUI-TripleKSampler"
"Bug Tracker" = "https://github.com/VraethrDalkr/ComfyUI-TripleKSampler/issues"

[tool.comfy]
PublisherId = "vraethrdalkr"
DisplayName = "ComfyUI-TripleKSampler"
