[project]
name = "tripleksampler"
version = "0.8.7"
description = "Triple-stage KSampler for Wan2.2 split models with Lightning LoRA"
readme = "README.md"
license = { file = "LICENSE" }
requires-python = ">=3.9"
dynamic = ["dependencies"]

[tool.setuptools.dynamic]
dependencies = { file = ["requirements.txt"] }

[project.urls]
Repository = "https://github.com/VraethrDalkr/ComfyUI-TripleKSampler"
"Bug Tracker" = "https://github.com/VraethrDalkr/ComfyUI-TripleKSampler/issues"

[tool.comfy]
PublisherId = "vraethrdalkr"
DisplayName = "ComfyUI-TripleKSampler"

[tool.pyright]
include = ["nodes.py", "__init__.py"]
exclude = ["tests/**"]
reportMissingImports = false
reportAttributeAccessIssue = false
reportUnknownMemberType = false
reportUnknownVariableType = false
pythonVersion = "3.12"
typeCheckingMode = "basic"
